<resources>
    <string name="app_name">Hotel3</string>
    <string name="booking">Бронирование</string>
    <string name="hotel">Отель</string>
    <string name="about_the_hotel">Об отеле</string>
    <string name="btnAppartment">К выбору номера</string>
    <string name="btnNotInclude">Что не включено</string>
    <string name="btnInclude">Что включено</string>
    <string name="btnСonveniences">Удобства</string>
    <string name="btnСonvenience">Удобство</string>
    <string name="btnChoose">Выбрать номер</string>
    <string name="ChooseRoom">Выбрать номер</string>
    <string name="aboutTheRoom">Подробнее о номере</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookingText">Бронирование</string>

</resources>