<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HotelFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/hotel"
            app:titleCentered="true" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners_background">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imageViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/idDataHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_yellow">

                <ImageView
                    android:id="@+id/idStarImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/star" />

                <TextView
                    android:id="@+id/idRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/idRatingName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/idAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/container1"
                android:layout_alignStart="@id/container1"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idAdressLine1View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idAdress"
                android:layout_alignStart="@id/idAdress"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idAdressLine1View"
                android:layout_alignStart="@id/idAdressLine1View"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:id="@+id/idminimalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/idpriceForIt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="165dp"
                android:layout_marginEnd="166dp"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idDataHotel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/idAboutTheHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_the_hotel"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idAboutTheHotel"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="2">

                <TextView

                    android:id="@+id/peculiaritiesTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_ser"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <TextView
                    android:id="@+id/peculiaritiesTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_ser"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <TextView
                    android:id="@+id/peculiaritiesTextView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_ser"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <TextView
                    android:id="@+id/peculiaritiesTextView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_ser"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </GridLayout>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/grid"
                android:layout_marginTop="4dp" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTextView"
                android:background="@drawable/rounded_corners_white"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:text="@string/btnСonveniences"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corners_white"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:text="@string/btnInclude"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corners_white"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:text="@string/btnNotInclude"
                android:textColor="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnRoom"
            style="@style/Base.Theme.First"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded_corners_blue"
            android:text="@string/btnAppartment" />
    </RelativeLayout>
</ScrollView>